2014-07-27  James Youngman  <jay@gnu.org>

	Update version number.
	* configure.ac: Move on from version 1.4.0.
	* NEWS: Add a new section for changes in CSSC-1.4.1-rc1.

2014-07-11  James Youngman  <jay@gnu.org>

	Release CSSC-1.4.0.
	* configure.ac (AC_INIT): Update the version number.
	* NEWS: Describe the new release.

2014-06-30  James Youngman  <jay@gnu.org>

	Release CSSC-1.3.2.
	* configure.ac: Change version number to 1.3.2.
	* NEWS: Update the version number of the first section.

	Update googletest unit test framework from r424 to r690.
	* gl/lib/.gitignore: Add the files generated by the pthread module
	(since we now depend on that).
	* bootstrap.conf (bootstrap_epilogue): Upgrade from r424 to r690
	of the googletest test framework.
	(buildreq): Update tool versions to the ones I'm actually using
	now, since these are really the only tools I test with routinely.
	(gnulib_modules): Depend on the pthread module.  Download
	googletest before we run gnulib-tool (instead of in the epilogue),
	so that the googletest/m4 directory is available to autoconf.
	* configure.ac: Include the googletest m4 library,
	unit-tests/googletest/m4.  Turn on the Automake option 'tar-ustar'
	which switches the dist file format from v7 Unix to the selects
	the ustar format defined by POSIX 1003.1-1988.  We need to do this
	since the distribution now contains path names longer than 99
	characters and the v7 format (or its consumers) cannot reliably
	deal with this.  Also make explicit some of the options which in
	any case are implied by the "gnits" option, since we would want to
	keep them even if turning off gnits.  Add configure tests required
	by the googletest framework.

	* NEWS: Point out the change of tar file format used for the
	distribution file.  Also mention the recent updates to googletest
	and gnulib.
	* unit-tests/Makefile.am: Update the build rules used to build the
	googletest unit test framework.  Don't build the samples.  Build